trustfall_core/src/resources/test_data/parse_errors/directive_before_root.parse-error.ron
Err(DirectiveNotInsideQueryRoot("output", Pos(
  line: 2,
  column: 7,
)))
